[gd_scene load_steps=14 format=3 uid="uid://dr2muauq4tijd"]

[ext_resource type="Script" uid="uid://dg7pcyttef12w" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://byq2qedecdf1p" path="res://assets/sprites/player.png" id="2_g2els"]
[ext_resource type="Shader" uid="uid://dwhsjplpg355a" path="res://shaders/player.gdshader" id="2_qhqgy"]

[sub_resource type="Animation" id="Animation_qhqgy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.43546, 1.43546)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -13)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:material:shader_parameter/flash_value")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_fjrip"]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.166667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [11, 12, 13]
}

[sub_resource type="Animation" id="Animation_tuyoq"]
resource_name = "hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.255351),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_g2els"]
resource_name = "idle"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.433333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_qlg0r"]
resource_name = "jump"
length = 0.3

[sub_resource type="Animation" id="Animation_dqkch"]
resource_name = "run"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.633333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 6, 4, 9, 10]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qhqgy"]
_data = {
&"RESET": SubResource("Animation_qhqgy"),
&"attack": SubResource("Animation_fjrip"),
&"hit": SubResource("Animation_tuyoq"),
&"idle": SubResource("Animation_g2els"),
&"jump": SubResource("Animation_qlg0r"),
&"run": SubResource("Animation_dqkch")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qhqgy"]
shader = ExtResource("2_qhqgy")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_value = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3vyb7"]
size = Vector2(12.6899, 16.7193)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2els"]
size = Vector2(13.5845, 17.7643)

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 1
position = Vector2(0, -13)
scale = Vector2(1.43546, 1.43546)
script = ExtResource("1_g2els")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qhqgy")
}
autoplay = "idle"

[node name="Player" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_qhqgy")
position = Vector2(-4.23516e-22, -2.08992)
scale = Vector2(0.753559, 0.752572)
texture = ExtResource("2_g2els")
hframes = 15
frame = 3
region_rect = Rect2(19.426, 26.0329, 111.268, 32.1306)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.696641, 5.57313)
scale = Vector2(0.996098, 1)
shape = SubResource("RectangleShape2D_3vyb7")

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="BufferTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="Attack" type="Timer" parent="."]
one_shot = true

[node name="CooldownCrit" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="hurtbox" type="Area2D" parent="." groups=["player"]]
position = Vector2(-0.696641, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(1.39328, 5.57313)
shape = SubResource("RectangleShape2D_g2els")
debug_color = Color(0, 0.629523, 0.481748, 0.42)

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="DieTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
ignore_time_scale = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Attack" to="." method="_on_attack_timeout"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
[connection signal="timeout" from="DieTimer" to="." method="_on_die_timer_timeout"]
